Fix JPEG decoding faiure when IMAGE_DECODER_DOWN_SAMPLING is enabled https://bugs.webkit.org/show_bug.cgi?id=98878

Patch by Jaehun Lim <ljaehun.lim@samsung.com> on 2012-10-11
Reviewed by Kenneth Russell.

When using libjpeg-turbo and enabling IMAGE_DECODER_DOWN_SAMPLING,
JPEG decoding failed because of no support for JCS_EXT_RGBA, JCS_EXT_BGRA.
Set RGBA values when color space is JCS_EXT_RGBA or JCS_EXT_BGRA.

No new tests.

* platform/image-decoders/jpeg/JPEGImageDecoder.cpp:
(WebCore::JPEGImageDecoder::outputScanlines):

Canonical link: https://commits.webkit.org/117045@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131075 268f45cc-cd09-0410-ab3c-d52691b4dbfc